// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`#user.info should require authentication 1`] = `
Object {
  "error": "authentication_required",
  "message": "Authentication required",
  "ok": false,
  "status": 401,
}
`;

exports[`#user.info should return known user 1`] = `
Object {
  "data": Object {
    "avatarUrl": "http://example.com/avatar.png",
    "id": "46fde1d4-0050-428f-9f0b-0bf77f4bdf61",
    "name": "User 1",
    "username": "user1",
  },
  "ok": true,
  "status": 200,
}
`;

exports[`#user.update should require authentication 1`] = `
Object {
  "error": "authentication_required",
  "message": "Authentication required",
  "ok": false,
  "status": 401,
}
`;

exports[`#user.update should update user profile information 1`] = `
Object {
  "data": Object {
    "avatarUrl": "http://example.com/avatar.png",
    "email": "user1@example.com",
    "id": "46fde1d4-0050-428f-9f0b-0bf77f4bdf61",
    "name": "New name",
    "username": "user1",
  },
  "ok": true,
  "status": 200,
}
`;
